app/static/css/style.css
@font-face {
    font-family: GlacialIndifferenceRegular;
    src: url(fonts/GlacialIndifference-Regular.otf);

}

@font-face {
    font-family: GlacialIndifferenceBold;
    src: url(fonts/GlacialIndifference-Bold.otf);
}

:root {
    --primary: #67C5D2;
    --secondary: #FC8476;
    --detail-font: #FC8476;
}

* {
    font-family: "GlacialIndifferenceRegular";
    font-weight: normal;
    font-style: normal;
}

h1 {
    font-weight: bold;
}

h2 {
    font-weight: bold;
    font-style: bold;
}

ul {
    font-weight: bold;
    font-style: italic;
}

/* Article images */
img {
    display: inline-block;
}

.img-block {
    display: block;
}

.img-lg {
    width: 100%;
}

.img-md {
    width: 65%;
}

.img-sm {
    width: 25%;
}




/* Mediq queries for mobile devices */
@media only screen and (max-width: 786px) {
    img.img-lg {
        width: 100%;
    }

    img.img-md {
        width: 80%;
    }

    img.img-sm {
        width: 45%;
    }

}



.center {
    display: flex;
    margin-left: auto;
    margin-right: auto;
    /*width: 50%;*/
}

.centrar {
    text-align: center;
}

.fw-bold {
    font-weight: bold;
}

.center-text {
    text-align: center;
}

.img-banner {
    width: 100%;
    margin-bottom: 80px;
}

#page-content {
    min-height: 500px;
}

#quiz-box {
    padding-bottom: 3cm;
}

img#navbarLogo {
    height: 120px;
    background-color: white;
    padding: 15px 15px 15px 15px;
    border-radius: 3px;
    position: relative;
    left: 50%;
    transform: translateX(-50%);
}

/*1.- Hice un nuevo navbar que es custom en vez de primary 
para poder hacer los diseños queridos -A*/
#navbar.navbar.navbar-custom {
    /* margin-bottom: 0; */
    background-color: var(--primary);
}

/*2.- Navbar nuevo que centra el texto y aparte este de aqui 
es donde puedes cambiar y diseñar el texto del navbar -A*/
.nav.navbar-nav.navbar-center li a {
    color: #181818;
    font-weight: bold;
}

/*3.- Navbar mobile con el icon bar visible -A*/
.navbar-toggle,
.icon-bar {
    border: 1px solid #181818;
}

/*4.- Para centralizar imagenes que son más de una en una linea -A*/
.imgcenter {
    text-align: center;
    width: 100%;
}

.my-btn {
    margin: 8px 8px 5px 5px;
}

.width23 {
    width: 23%;
}

/* Activity cards */
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/
.card{
    width: 100%;
    padding: 15px;
    margin: 5px;
    background-color: #F3F3F3;
    border-radius: 5px;
}

.card .card-body img{
    width: 100%;
    height: 200px;
    max-height: 400px;
}

.card .card-body .btn{
}

/* @media (max-width:991px)  { 
    .card{
    }
} */

/*Footer style*/
/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/
footer {
    text-align: left;
    background-color:  #FFE1A4;
}


footer h3{
    text-transform: uppercase;
    color: #FC8476;
}

footer a:link,
footer a:visited,
footer a:hover,
footer a:active {
    text-decoration: none;
    color: #333;
}


footer a {
    overflow: hidden;
}

#footer-branding{
    text-align: center;
    /* background-color: white; */
}

#footerLogo {
    margin: 10px 10px 10px 10px;
    padding: 10px 10px 10px 10px;
    background-color: white;
    height: 180px;
    border-radius: 3px;
}

img.icon {
    display: inline-block;
    padding-bottom: 10pt;
    width: 30px;
    position: relative;
    transform: translateY(10%);
}

footer span{
    font-size: 2rem;
}

@media (max-width:991px)  { 
    footer {
        text-align: center;
    }
}

/*////////////////////////////////////////////////////////////////////////////////////////////////////////*/
#carouselContainer {
    margin: 0px;
    padding-left: 0px;
    padding-right: 30px;
}

.carousel-inner>.item>img,
.carousel-inner>.item>a>img {
    width: 35%;
    margin: auto;
}

